--- a/d/de/del/delphiglass.com.html
+++ b/d/de/del/delphiglass.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the delphiglass.com privacy policy that was archived on 2004-06-03.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040603093859id_/http%3A//www.delphiglass.com/index.cfm%3Fpage%3Dmain_security) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the delphiglass.com privacy policy that was archived on 2004-12-07.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041207012124id_/http%3A//www.delphiglass.com/index.cfm%3Fpage%3Dmain_security) for the most accurate reproduction.-->
 
 <html><head>
 	
@@ -80,13 +80,14 @@ top.location = "#goto#";
 <table border="0" width="760" cellpadding="2" cellspacing="1">
 
 <tbody><tr>
-	<td width="168" align="center"><nobr><a href="http://www.delphiglass.com/index.cfm?page=homepage&amp;clear=1"><img src="images/logo1_new.gif" border="0"><img src="images/logo2_new.gif" alt="Delphi" border="0"></a></nobr></td>
-	<td height="10" valign="bottom"><br>&nbsp; <font color="a5011a"><b>Helping People Create Since 1972</b></font></td>
+	<td width="168" align="center"><nobr><a href="http://www.delphiglass.com/index.cfm?page=homepage&amp;clear=1"><img src="images/logo_xmas2.gif" border="0" alt="Delphi"></a></nobr></td>
+	<td height="10" valign="bottom"><img src="images/logo_xmas3.gif" alt="Give Them Something Special"></td>
 	<form name="search" action="index.cfm?page=itemList&amp;stage=2" method="post"></form>
 	<input type="hidden" name="searchCategory" value="0">	
 	<td class="vsmall" height="26" valign="bottom" align="right">
 		<a href="http://www.delphiglass.com/index.cfm?page=cart_display_adjustable" class="subnav"><img src="images/homepage_cart.gif" alt="shopping cart" border="0" align="absmiddle"> my cart</a> &nbsp; | &nbsp;
-		<a href="http://www.delphiglass.com/index.cfm?page=login" class="subnav">my account</a>&nbsp;
+		<a href="http://www.delphiglass.com/index.cfm?page=login" class="subnav">my account</a>&nbsp; | &nbsp;
+		<a href="http://www.delphiglass.com/index.cfm?page=main_track" class="subnav">track your order</a>&nbsp;
 		<br><img src="images/clear.gif" height="5"><br>
 		search &nbsp;<input type="text" size="30" name="searchtext" class="vsmall" value=" description / catalog#" onclick="	if (document.forms.search.searchtext.value == ' description / catalog#')
 									{document.forms.search.searchtext.value = ''}; ">
@@ -99,7 +100,7 @@ top.location = "#goto#";
 <table cellpadding="0" cellspacing="0" width="100%">
 	<tbody><tr><td bgcolor="0F1F2A" height="1" colspan="2"></td></tr>
 	<tr>
-		<td bgcolor="FFFFBF" width="150" height="25" align="right">		
+		<td bgcolor="015A20" width="150" height="25" align="right">		
 			<table cellpadding="4" cellspacing="4">
 				<tbody><tr>
 					<td align="center" class="topstyle1" id="r1" onmouseover="javascript:r1.style.background='FFEFFF'" onclick="javascript:r1.style.background='F3DBFF'" onmouseout="javascript:r1.style.background='F3DBFF'"><nobr>&nbsp;<a href="http://www.delphiglass.com/index.cfm?page=cat_home&amp;altcat=1981" class="sidenav">New Products</a>&nbsp;</nobr></td> 
@@ -126,81 +127,92 @@ top.location = "#goto#";
 <table width="760" cellpadding="0" cellspacing="0" border="0">
 
 <tbody><tr>
-	<td width="150" bgcolor="FFFFBF" height="8"><img src="images/clear.gif" width="150" height="1"></td></tr>
+	<td width="150" bgcolor="015A20" height="8"><img src="images/clear.gif" width="150" height="1"></td></tr>
 <tr>
-	<td width="150" bgcolor="FFFFBF" valign="top"> 
+	<td width="150" bgcolor="015A20" valign="top"><img src="images/snow_green.gif"> 
 
 
-<table width="100%" border="0" cellpadding="0" cellspacing="0">
+<br>
+&nbsp;<a href="http://www.delphiglass.com/index.cfm?page=main_email" class="sidenav"><img src="images/xmas_nav9.gif" alt="Email Sign Up" border="0" align="absmiddle"></a><table width="100%" border="0" cellpadding="0" cellspacing="0">
 <tbody><tr><td height="15"></td></tr>
 
 
+
+
+
 </tbody></table><table width="100%" border="0" cellpadding="0" cellspacing="0">
-<tbody><tr><td>&nbsp;</td></tr>
-	<tr><td height="30" valign="top">&nbsp;<a href="http://www.delphiglass.com/index.cfm?page=main_email" class="sidenav"><img src="images/homepage_email.gif" alt="Email Sign Up" border="0" align="absmiddle"> Email Sign Up</a></td></tr>
+<tbody><tr><td height="5"></td></tr>
 			
+
 	<form name="formleft1" action="http://www.delphiglass.com/index.cfm" method="post"></form>
-	<tr><td height="1" bgcolor="ffffff"></td></tr>
-	<tr><td height="22" bgcolor="E5EEEE" id="left1" onmouseover="javascript:left1.style.background='F9FFFF'" onclick="javascript:left1.style.background='FFE546';document.forms.formleft1.submit();" onmouseout="javascript:left1.style.background='E5EEEE'">
-		&nbsp; &nbsp;<a href="http://www.delphiglass.com/" class="sidenav">Home</a>
+	<tr><td height="1" bgcolor="F83D00"></td></tr>
+	<tr><td height="2" bgcolor="CD3301"></td></tr>
+	<tr><td height="20" bgcolor="CD3301" id="left1" onclick="javascript:document.forms.formleft1.submit();">
+		&nbsp; &nbsp;<a href="http://www.delphiglass.com/" class="sidenav"><img src="images/xmas_nav1.gif" alt="Home" border="0"></a>
 	</td></tr>
 	
 	<form name="formleft2" action="http://www.delphiglass.com/index.cfm?page=cat_home&amp;altCat=1751" method="post"></form>
-	<tr><td height="1" bgcolor="D5DDDD"></td></tr>
-	<tr><td height="1" bgcolor="ffffff"></td></tr>
-	<tr><td height="22" bgcolor="E5EEEE" id="left2" onmouseover="javascript:left2.style.background='F9FFFF'" onclick="javascript:left2.style.background='FFE546';document.forms.formleft2.submit();" onmouseout="javascript:left2.style.background='E5EEEE'">
-		&nbsp; &nbsp;<a href="http://www.delphiglass.com/index.cfm?page=cat_home&amp;altCat=1751" class="sidenav">Getting Started</a>
+	<tr><td height="1" bgcolor="A72900"></td></tr>
+	<tr><td height="1" bgcolor="F83D00"></td></tr>
+	<tr><td height="2" bgcolor="CD3301"></td></tr>
+	<tr><td height="20" bgcolor="CD3301" id="left2" onclick="javascript:document.forms.formleft2.submit();">
+		&nbsp; &nbsp;<a href="http://www.delphiglass.com/index.cfm?page=cat_home&amp;altCat=1751" class="sidenav"><img src="images/xmas_nav2.gif" alt="Getting Started" border="0"></a>
 	</td></tr>
 	
 	<form name="formleft3" action="http://www.delphiglass.com/index.cfm?page=main_projects" method="post"></form>
-	<tr><td height="1" bgcolor="D5DDDD"></td></tr>
-	<tr><td height="1" bgcolor="ffffff"></td></tr>
-	<tr><td height="22" bgcolor="E5EEEE" id="left3" onmouseover="javascript:left3.style.background='F9FFFF'" onclick="javascript:left3.style.background='FFE546';document.forms.formleft3.submit();" onmouseout="javascript:left3.style.background='E5EEEE'">
-		&nbsp; &nbsp;<a href="http://www.delphiglass.com/index.cfm?page=main_projects" class="sidenav">Patterns &amp; Projects</a>
+	<tr><td height="1" bgcolor="A72900"></td></tr>
+	<tr><td height="1" bgcolor="F83D00"></td></tr>
+	<tr><td height="2" bgcolor="CD3301"></td></tr>
+	<tr><td height="20" bgcolor="CD3301" id="left3" onclick="javascript:document.forms.formleft3.submit();">
+		&nbsp; &nbsp;<a href="http://www.delphiglass.com/index.cfm?page=main_projects" class="sidenav"><img src="images/xmas_nav3.gif" alt="Patterns &amp; Projects" border="0"></a>
 		
 	</td></tr>
 	
-	
 	<form name="formleft4" action="http://www.delphiglass.com/index.cfm?page=main_glass" method="post"></form>
-	<tr><td height="1" bgcolor="D5DDDD"></td></tr>
-	<tr><td height="1" bgcolor="ffffff"></td></tr>
-	<tr><td height="22" bgcolor="E5EEEE" id="left4" onmouseover="javascript:left4.style.background='F9FFFF'" onclick="javascript:left4.style.background='FFE546';document.forms.formleft4.submit();" onmouseout="javascript:left4.style.background='E5EEEE'">
-		&nbsp; &nbsp;<a href="http://www.delphiglass.com/index.cfm?page=main_glass" class="sidenav">Glass Finder</a>
+	<tr><td height="1" bgcolor="A72900"></td></tr>
+	<tr><td height="1" bgcolor="F83D00"></td></tr>
+	<tr><td height="2" bgcolor="CD3301"></td></tr>
+	<tr><td height="20" bgcolor="CD3301" id="left4" onclick="javascript:document.forms.formleft4.submit();">
+		&nbsp; &nbsp;<a href="http://www.delphiglass.com/index.cfm?page=main_glass" class="sidenav"><img src="images/xmas_nav4.gif" alt="Glass Finder" border="0"></a>
 	</td></tr>
 	
 	<form name="formleft5" action="http://www.delphiglass.com/index.cfm?page=agf_main" method="post"></form>
-	<tr><td height="1" bgcolor="D5DDDD"></td></tr>
-	<tr><td height="1" bgcolor="ffffff"></td></tr>
-	<tr><td height="22" bgcolor="E5EEEE" id="left5" onmouseover="javascript:left5.style.background='F9FFFF'" onclick="javascript:left5.style.background='FFE546';document.forms.formleft5.submit();" onmouseout="javascript:left5.style.background='E5EEEE'">
-		&nbsp; &nbsp;<a href="http://www.delphiglass.com/index.cfm?page=agf_main" class="sidenav">Special Events</a>
+	<tr><td height="1" bgcolor="A72900"></td></tr>
+	<tr><td height="1" bgcolor="F83D00"></td></tr>
+	<tr><td height="2" bgcolor="CD3301"></td></tr>
+	<tr><td height="20" bgcolor="CD3301" id="left5" onclick="javascript:document.forms.formleft5.submit();">
+		&nbsp; &nbsp;<a href="http://www.delphiglass.com/index.cfm?page=agf_main" class="sidenav"><img src="images/xmas_nav5.gif" alt="Special Events" border="0"></a>
 	</td></tr>
 	
 	<form name="formleft6" action="http://www.delphiglass.com/index.cfm?page=knowledgebase" method="post"></form>
-	<tr><td height="1" bgcolor="D5DDDD"></td></tr>
-	<tr><td height="1" bgcolor="ffffff"></td></tr>
-	<tr><td height="22" bgcolor="E5EEEE" id="left6" onmouseover="javascript:left6.style.background='F9FFFF'" onclick="javascript:left6.style.background='FFE546';document.forms.formleft6.submit();" onmouseout="javascript:left6.style.background='E5EEEE'">
-		&nbsp; &nbsp;<a href="http://www.delphiglass.com/index.cfm?page=knowledgebase" class="sidenav">Tips &amp; Techniques</a>
+	<tr><td height="1" bgcolor="A72900"></td></tr>
+	<tr><td height="1" bgcolor="F83D00"></td></tr>
+	<tr><td height="2" bgcolor="CD3301"></td></tr>
+	<tr><td height="20" bgcolor="CD3301" id="left6" onclick="javascript:document.forms.formleft6.submit();">
+		&nbsp; &nbsp;<a href="http://www.delphiglass.com/index.cfm?page=knowledgebase" class="sidenav"><img src="images/xmas_nav6.gif" alt="Tips &amp; Techniques" border="0"></a>
 	</td></tr>
 	
 	<form name="formleft7" action="http://www.delphiglass.com/index.cfm?page=workshops_main&amp;stage=3" method="post"></form>
-	<tr><td height="1" bgcolor="D5DDDD"></td></tr>
-	<tr><td height="1" bgcolor="ffffff"></td></tr>
-	<tr><td height="22" bgcolor="E5EEEE" id="left7" onmouseover="javascript:left7.style.background='F9FFFF'" onclick="javascript:left7.style.background='FFE546';document.forms.formleft7.submit();" onmouseout="javascript:left7.style.background='E5EEEE'">
-		&nbsp; &nbsp;<a href="http://www.delphiglass.com/index.cfm?page=workshops_main&amp;stage=3" class="sidenav">Classes</a>
+	<tr><td height="1" bgcolor="A72900"></td></tr>
+	<tr><td height="1" bgcolor="F83D00"></td></tr>
+	<tr><td height="2" bgcolor="CD3301"></td></tr>
+	<tr><td height="20" bgcolor="CD3301" id="left7" onclick="javascript:document.forms.formleft7.submit();">
+		&nbsp; &nbsp;<a href="http://www.delphiglass.com/index.cfm?page=workshops_main&amp;stage=3" class="sidenav"><img src="images/xmas_nav7.gif" alt="Classes" border="0"></a>
 	</td></tr>
 	
 	<form name="formleft8" action="http://www.delphiglass.com/index.cfm?page=login" method="post"></form>
-	<tr><td height="1" bgcolor="D5DDDD"></td></tr>
-	<tr><td height="1" bgcolor="ffffff"></td></tr>
-	<tr><td height="22" bgcolor="E5EEEE" id="left8" onmouseover="javascript:left8.style.background='F9FFFF'" onclick="javascript:left8.style.background='FFE546';document.forms.formleft8.submit();" onmouseout="javascript:left8.style.background='E5EEEE'">
-		&nbsp; &nbsp;<a href="http://www.delphiglass.com/index.cfm?page=login" class="sidenav">Customer Service</a>
+	<tr><td height="1" bgcolor="A72900"></td></tr>
+	<tr><td height="1" bgcolor="F83D00"></td></tr>
+	<tr><td height="2" bgcolor="CD3301"></td></tr>
+	<tr><td height="20" bgcolor="CD3301" id="left8" onclick="javascript:document.forms.formleft8.submit();">
+		&nbsp; &nbsp;<a href="http://www.delphiglass.com/index.cfm?page=login" class="sidenav"><img src="images/xmas_nav8.gif" alt="My Account" border="0"></a>
 	</td></tr>
 	
-	<tr><td height="1" bgcolor="D5DDDD"></td></tr>
+	<tr><td height="1" bgcolor="A72900"></td></tr>
 
 </tbody></table>
 <br><br>
-<div align="center"><a href="https://www.delphiglass.com/index.cfm?page=main_catalog"><img src="images/cat_req.gif" alt="request catalog" border="0"></a></div>
+<div align="center"><a href="https://www.delphiglass.com/index.cfm?page=main_catalog"><img src="images/xmas_catalog.gif" alt="request catalog" border="0"></a></div>
 
 	</td>
 	<td>&nbsp;&nbsp;</td>
@@ -217,7 +229,7 @@ top.location = "#goto#";
 			</td>
 		</tr>
 	
-			<tr><td height="20" bgcolor="D5DDDD" class="vnorm">&nbsp; &nbsp;
+			<tr><td height="20" bgcolor="D6F6FF" class="vnorm">&nbsp; &nbsp;
 	
 			<b>Security Information</b>
 			</td></tr>
@@ -296,6 +308,9 @@ DelphiGlass.com welcomes your questions and comments about privacy. Please send 
 		</td></tr></tbody></table>
 	</td></tr>
 </tbody></table>
+
+
+
 
 
 
