--- a/b/bl/blu/blueman.com.html
+++ b/b/bl/blu/blueman.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the blueman.com privacy policy that was archived on 2004-06-02.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040602192201id_/http%3A//www.blueman.com/privacy.shtml) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the blueman.com privacy policy that was archived on 2004-12-07.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041207012454id_/http%3A//www.blueman.com/privacy.shtml) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN"><html><head>
 
@@ -29,7 +29,71 @@ a.menu {color:#FFFFFF; text-decoration:none} a:hover {color:"#E5501F"}
 
 </head>
 
-<body marginwidth="15" marginheight="15" topmargin="15" leftmargin="15" text="#FFFFFF" link="#9999FF" bgcolor="#000000" vlink="#9999FF">
+<body marginwidth="15" marginheight="15" topmargin="15" leftmargin="15" text="#FFFFFF" link="#9999FF" bgcolor="#000000" vlink="#9999FF" stats="1"><!-- Start of DeepMetrix (.NET) StatScript -->
+<script language="javascript">
+
+var DMNETdomain = "";
+var DMNETpage = window.location;
+var DMNETversion = "86";
+var DMNETsendTo = "//collector.blueman.com/dm.gif?";
+var DMNETsession;
+
+function dmneterr(){return true;}
+
+window.onerror=dmneterr;
+var s = new Date();
+
+if (navigator.userAgent.indexOf('Mac') >= 0 && s.getTimezoneOffset() >= 720)
+  s.setTime (s.getTime() - 1440*60*1000);
+
+var dmnetURL = location.protocol + DMNETsendTo+"v="+DMNETversion+"&vst=1";
+var dmnetCookieString = document.cookie.toString();
+
+if(dmnetCookieString.indexOf("_dmnid") == -1)
+  {
+    DMNETsession = parseInt( Math.random()*1000000 ) + "_" + s.getTime();
+    var domStr = "";
+    if(DMNETdomain != "")
+    {
+      domStr = "domain="+ DMNETdomain +";";
+    }
+    document.cookie = "_dmnid=" + DMNETsession + ";expires=Mon, 31-Dec-2008 00:00:00 GMT;"+domStr+"path=/;";
+  }
+dmnetCookieString = document.cookie.toString();
+if(dmnetCookieString.indexOf('_dmnid') == -1)
+  {
+    DMNETsession = "";
+  }
+else
+  {
+    if(dmnetCookieString.indexOf(';') == -1)
+      dmnetCookieString = dmnetCookieString.replace(/_dm/g, ';_dm');
+
+    var start = dmnetCookieString.indexOf("_dmnid=") + 7;
+    var end = dmnetCookieString.indexOf(";",start);
+
+    if (end == -1)
+      end = dmnetCookieString.length;
+    DMNETsession = unescape(dmnetCookieString.substring(start,end));
+  }
+dmnetURL += "&id="+DMNETsession+"&url="+escape(DMNETpage) + "&ref="+escape(document.referrer)+"&lng=" + ((!document.all ||  navigator.userAgent.match('Opera')) ? navigator.language : navigator.userLanguage) + "&tz=" + (Math.round(new Date('dec 1, 2002').getTimezoneOffset()/60)*-1);
+if(screen)
+  dmnetURL += "&scr=" + escape( screen.width + "x" + screen.height + " " + screen.colorDepth + "bpp" );
+
+dmnetURL += "&rnd=" + new Date().getTime();
+
+if(document.layers)
+{
+  document.write("<la"+"yer name=\"DMStats\" visibility=hide><img src=\""+dmnetURL+"\" height=1 width=1></la"+"yer>");
+}
+else
+{
+  document.write("<di"+"v id=\"DMStats\" STYLE=\"position:absolute;visibility:hidden;\"><img src=\""+dmnetURL+"\" height=1 width=1></di"+"v>");
+}
+
+</script><div id="DMStats" style="position:absolute;visibility:hidden;"><img src="https://collector.blueman.com/dm.gif?v=86&amp;vst=1&amp;id=&amp;url=https%3A//web.archive.org/web/20041207012454id_/http%253A//www.blueman.com/privacy.shtml&amp;ref=&amp;lng=en-US&amp;tz=0&amp;scr=800x600%2024bpp&amp;rnd=1580367752116" height="1" width="1"></div>
+<!-- End of DeepMetrix (.NET) StatScript -->
+
 
 
 
@@ -164,7 +228,6 @@ return open (url, windowName, windowStuff);
 	<a href="/ticketinfo/chicago.shtml" id="mainmenu">CHICAGO</a><br>
 	<a href="/ticketinfo/lasvegas.shtml" id="mainmenu">LAS VEGAS</a><br>
 	<a href="/ticketinfo/berlin.shtml" id="mainmenu">BERLIN</a><br>
-	<a href="/complex/tourinformation.shtml" id="mainmenu">THE COMPLEX TOUR</a><br>
 	<a href="/ticketinfo/groupsales/index.shtml" id="mainmenu">GROUP SALES</a><br>
 	<a href="/giftcertificate/index.shtml" id="mainmenu">GIFT CERTIFICATES</a><br>
 	<br>
@@ -480,7 +543,7 @@ remove or edit your postings.  All submissions become the property of Blue Man G
 
 <!-- FOOTER -->
 
-	<td colspan="2"><p align="right" class="footer"><font size="1" face="Arial, Helvetica, sans-serif" color="#cccccc"><b>©&nbsp;Copyright Blue Man Productions, Inc. 2004</b><br><a href="http://www.blueman.com/privacy.shtml">Privacy Policy</a> | <a href="/communitycontests/contact.shtml">Contact Us</a></font></p></td>
+	<td colspan="2"><p align="right" class="footer"><font size="1" face="Arial, Helvetica, sans-serif" color="#cccccc"><b>©&nbsp;Copyright Blue Man Productions, Inc. 2004</b><br><a href="/sitemap.shtml">Site Map</a> | <a href="http://www.blueman.com/privacy.shtml">Privacy Policy</a> | <a href="/communitycontests/contact.shtml">Contact Us</a></font></p></td>
 
 	</tr>
 
