--- a/w/we/web/webengage.com.html
+++ b/w/we/web/webengage.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the webengage.com privacy policy that was archived on 2004-06-07.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040607195144id_/http%3A//www.webengage.com/legal/privacy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the webengage.com privacy policy that was archived on 2004-12-07.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041207012833id_/http%3A//www.webengage.com/legal/privacy.php) for the most accurate reproduction.-->
 
 <html><head>
 <meta http-equiv="content-type" content="text/html;charset=iso-8859-1">
@@ -214,9 +214,10 @@ Because we take your privacy seriously, and because we may gather certain types 
 <br><br><br><br>
 
 <span class="copyright">
-	<a href="/legal/copyright.php" class="legal">Copyright © 2004 WebEngage, Inc.</a>&nbsp;&nbsp;&nbsp;+&nbsp;&nbsp;&nbsp;
-	<a href="/legal/privacy.php" class="legal">Privacy Statement</a>&nbsp;&nbsp;&nbsp;+&nbsp;&nbsp;&nbsp;
-	<a href="/legal/terms.php" class="legal">Terms of Use</a>
+	<a href="/legal/copyright.php" class="legal">Copyright © 2001-2004 WebEngage, Inc.</a>&nbsp;&nbsp;&nbsp;+&nbsp;&nbsp;&nbsp;
+	<a href="/legal/privacy.php" class="legal">Privacy</a>&nbsp;&nbsp;&nbsp;+&nbsp;&nbsp;&nbsp;
+	<a href="/legal/terms.php" class="legal">Terms of Use</a>&nbsp;&nbsp;&nbsp;+&nbsp;&nbsp;&nbsp;
+	<a href="http://www.prescientsoftware.com" class="legal">Built by Prescient</a>
 </span>
 <br>
 <br>
