--- a/4/4w/4wo/4woman.gov.html
+++ b/4/4w/4wo/4woman.gov.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the 4woman.gov privacy policy that was archived on 2004-06-11.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040611065300id_/http%3A//4woman.gov/about/privacy.htm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the 4woman.gov privacy policy that was archived on 2004-12-07.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041207013310id_/http%3A//www.4woman.gov/about/privacy.htm) for the most accurate reproduction.-->
 
 <html><head>
 <title>NWHIC's Privacy Policy</title>
