--- a/w/we/wed/wedj.com.html
+++ b/w/we/wed/wedj.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the wedj.com privacy policy that was archived on 2004-06-07.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040607125214id_/http%3A//wedj.com/wedjcom.nsf/privacy.html%21OpenPage) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the wedj.com privacy policy that was archived on 2004-12-07.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041207014024id_/http%3A//wedj.com/wedjcom.nsf/privacy.html%21OpenPage) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head>
 <title>WeDJ.com</title><!--Disc jockey Photography Videography wedding music listings starts here-->
@@ -18,7 +18,7 @@
 
 <!-- Include selected dj - photographer - videographer theme -->
 
-<link rel="stylesheet" type="text/css" href="/themes/spring/style.css">
+<link rel="stylesheet" type="text/css" href="/themes/christmas/style.css">
 <script language="JavaScript" type="text/javascript">
 <!-- 
 document._domino_target = "_self";
@@ -75,8 +75,8 @@ If you feel that we have violated your privacy beyond the scope of this document
 <br><h3>Anonymous Visitors:</h3>
 <p>The purpose of our site is to find DJs and Photographers for wedding receptions or special events.  Anonymous visitors are considered the "customer" and visit our site to gather information and/or provide basic contact information to prospective DJs and/or Photographers.  To assist the customer we ask for voluntary information which is stored on the customer's computer as a cookie.  It is used to help auto-populate redundant forms.  Data collected from cookie-based forms are only provided to the vendor selected, and only at the option of the customer.<br>
 Some of our pages contain a simple "Request more information" form which can be used to exchange information with our site vendors.  Each field is stored in a cookie for 7 days and can be erased by clearing the fields and leaving a page.<br>
-<br></p><h3>Registered Visitors:</h3>
-<p>Anonymous customers who want additional information by email may become a registered user of our site.  The information collected is used internally to match their interests to DJs and Photographers in their area.  Accounts may be terminated at any time by sending an email message to support@wedj.com with "remove" as the subject line.<br>
+<br></p><h3>Named Visitors:</h3>
+<p>Visitors to our website have the opportunity to receive free information from members.  We collect at their discretion, name, phone number, email address, event date, and type of event.  WeDJ.com sends a single email to each named visitor summarizing the websites he/she visited and then removes the Named Visitor's data.  If the Named Visitor visits WeDJ.com on a different date, another single email containing a summary will be sent should the Named Visitor provide their name for free information from vendors. <br>
 <br></p><h3>Payments:</h3>
 <p>Site vendors may opt-in for account options.  Electronic payments are handled externally through PayPal.  WeDJ.com does not collect any information other than the product requested.  For further information concerning electronic payments, please see our provider's policy (<a href="http://www.paypal.com/cgi-bin/webscr?cmd=p/gen/privacy-outside">http://www.paypal.com/cgi-bin/webscr?cmd=p/gen/privacy-outside</a>).<br><br><a name="data"></a></p><h3>Our Commitment To Data Security </h3>
 <p>To prevent unauthorized access, maintain data accuracy, and ensure the correct use of information, we have put in place appropriate physical, electronic, and managerial procedures to safeguard and secure the information we collect online.<br>
