--- a/b/bb/bbb/bbbnewyork.org.html
+++ b/b/bb/bbb/bbbnewyork.org.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the bbbnewyork.org privacy policy that was archived on 2004-06-04.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040604210720id_/http%3A//www.bbbnewyork.org/about/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the bbbnewyork.org privacy policy that was archived on 2004-12-07.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041207014150id_/http%3A//www.bbbnewyork.org/about/privacy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//IETF//DTD HTML//EN"><html><head>
 <meta name="KeyWords" content="Better Business Bureau: Privacy Policy">
@@ -19,66 +19,58 @@
 </map>
 <p align="left"><img usemap="#bbbmap" src="http://www.newyork.bbb.org/images/headers/newyork.gif" align="bottom" border="0" width="604" height="95"></p><p align="left">
 </p><h2 align="center"><font face="arial,helvetica" color="#000099">The Better Business Bureau<br>
+
 Online Privacy Policy</font></h2>
 
-<p>The Better Business Bureau (BBB) system is committed to maintaining your confidence and
-trust, and accordingly maintains the following privacy policy to protect personal
-information you provide online.</p>
+<h3>The Better Business Bureau Privacy Policy</h3>
 
-<h3>Basic Confidentiality Policy</h3>
+<p>The Better Business Bureau (BBB) is committed to maintaining your confidence and trust, and accordingly maintains the following privacy policy to protect personal information you provide.</p>
 
-<p>It is BBB policy that <b>personal information</b>, such as your name, postal and e-mail
-address or telephone number, is <b>private and confidential</b>. Accordingly, the personal
-information you provide is stored in a secure location, is accessible <i>only</i> by
-designated staff, and is used <i>only</i> for the purposes for which you provide the
-information (such as to reply to your request or to handle your complaint). For example,
-when you file a complaint about a business online, the personal information you provide
-will be used to process your complaint.</p>
+<h3>BBB's Commitment to Security</h3>
 
-<p><i>If</i> you also indicate on our sites that <i>you would like to receive information
-about other BBB programs and services</i>, such as scam alerts, publications or
-membership, your personal information will be added to appropriate BBB mailing lists. You
-can indicate your desire when completing a complaint form or when you send us e-mail. If
-at any time you change your mind and would like to add or remove your name from the BBB's
-mailing list, or correct your personal information, please email us at <a href="mailto:inquiry@newyork.bbb.org">inquiry@newyork.bbb.org</a>.</p>
+<p>Physical, electronic and managerial procedures have been employed to safeguard the security and integrity of personal information. The BBB encrypts billing information wherever the BBB requests it. Personal information is accessible only by staff and volunteers designated to handle complaints or requests. All BBB agents and contractors with access to personal information obtained on the BBB web site are also bound to adhere to this policy as part of their contract with the BBB.</p>
 
-<h3>No Release of Information to Third Parties</h3>
+<h3>Personal Information that the BBB May Collect Online</h3>
 
-<p>Personal information <b>will not be released to third parties</b> <i>except</i> to
-further the purpose for which you provide the information, such as sending your complaint
-to the company for action, or if release is required by law or is pertinent to judicial or
-governmental investigations or proceedings. <i>There are no other circumstances under
-which we will provide or sell personal information to third parties.</i></p>
+<p>The BBB collects the following types of personal information: names, postal and e-mail addresses, phone and facsimile numbers, billing information, and complaint information. The BBB may also collect business information from sole proprietorships that apply for membership or program participation, some of which might constitute personal information, as well as personal information from individuals acting solely in their business capacity. The BBB's complaint form is hosted by the Council of Better Business Bureaus (CBBB), which processes your complaint according to its own privacy and security policies.</p>
 
-<h3>No Computer Tracking of Identifiable Information</h3>
+<p>The BBB does not knowingly collect or maintain any personal information from children under the age of 13. In addition, no part of our site is designed with the purpose of attracting any person under age 13.</p>
 
-<p>Our computer is not set up to track, collect or distribute personal information about
-its visitors. It does recognize the home server of visitors, but not e-mail addresses. For
-example, we can tell which Internet Service Provider our visitors use, but not the names,
-addresses or other information about our visitors that would allow us to identify the
-particular visitors to our sites. This information is used only for internal purposes by
-BBB technical support staff. </p>
+<h3>How the BBB May Use Personal Information Collected Online</h3>
 
-<p>Our computer also recognizes the site where a visitor "clicked-to-check" on
-the BBB<i>OnLine</i> seal of a BBB<i>OnLine</i> program participant, but we cannot
-identify the visitor or the visitor's address. Site information is used to confirm
-participation in the BBB<i>OnLine</i> program, and may be used to advise participants of
-the numbers of visitors who come to our BBB<i>OnLine</i> site from their sites. No
-personal information is collected.</p>
+<p>Unless you consent otherwise, the BBB will use your personal information only for the purpose for which it was submitted, such as to replying to inquiries, handling your complaints and processing billing and business requests related to program participation. We will use such information to provide operational notices, in program recordkeeping and to conduct research on industry marketplace practices. Our research may lead to the publication of aggregate demographical data but will not result in the reporting or publication of any personal information provided to us. At certain points where personal information is collected on our site, there may be a box where you may indicate you would like to be on a list to receive information about other BBB programs and services and about ways to support the BBB and its Foundation. At any time you can add or remove your name from our mailing list by contacting us at <a href="mailto:inquiry@newyork.bbb.org">inquiry@newyork.bbb.org</a>.</p>
 
-<p>In addition, our web sites track information about the visits to our web sites. For
-example, we compile statistics that show the daily number of visitors to our sites, the
-daily requests we receive for particular files on our web sites, and what countries those
-requests come from. These aggregated statistics are used internally to better provide
-services to the public and may also be provided to others, but again, the statistics
-contain no personal information and cannot be used to gather such information. </p>
+<h3>How Your Information May Be Shared</h3>
 
-<hr width="300" size="5" align="center">
+<p>In order to process complaints against businesses, the BBB will transfer complaints received to the company complained about. It is also possible that a complaint, request or inquiry will be more appropriately handled by another BBB, in which case the request or inquiry will be transferred to the proper BBB. By completing a complaint form or sending us a request or inquiry, you are allowing us to forward your information to the proper business and also to the proper BBB, if necessary. Without submission of the requested information, the BBB will not be able to share your information and process your complaint. The BBB may also share your personal information with the CBBB for CBBB to research industry marketplace practices. Just as in any research we may do, CBBB research will not result in the reporting or publication of any personal information. The BBB never sells or rents personal information.</p>
 
-<p>The Better Business Bureau system is not responsible for the privacy practices or
-policies of participants in its various programs.</p>
+<p>We will also release personal information under the following circumstances:</p>
 
-<p>April 22, 1998</p>
+<ul>
+	<li><p>Where release is required by law (for example, a subpoena) or regulation, or is requested by a government agency conducting investigations or proceedings;</p></li>
+	<li><p>Where our records indicate a company may be engaged in fraudulent activity or other deceptive practices that a governmental agency should be made aware of;</p></li>
+	<li><p>To appropriate governmental authorities, where warranted by a company's failure to participate in the BBB's advertising self-regulatory process; or</p></li>
+	<li><p>To appropriate persons, where your communication suggests possible harm to others.</p></li>
+</ul>
+
+<h3>Help Us Keep Your Personal Information Accurate</h3>
+
+<p>If your personal information changes or you would like to review the personal information we may have on file, please email us with the new information or your review request at inquiry@newyork.bbb.org. Let us also know the department or BBB program that led to your submission of personal information so we may efficiently locate your information.</p>
+
+<h3>Computer Tracking and Cookies</h3>
+
+<p>Our web site is not set up to track, collect or distribute personal information not entered by its visitors. Our site logs do generate certain kinds of non-identifying site usage data, such as the number of hits and visits to our site. This information is used for internal purposes by technical support staff to provide better services to the public and may also be provided to others, but again, the statistics contain no personal information and cannot be used to gather such information.</p>
+
+<p>A cookie is a small amount of data that is sent to your browser from a Web server and stored on your computer's hard drive. The BBB uses non-identifying cookies to provide easier site navigation and access to forms. You can still use the BBB site if your browser is set to reject cookies. Our cookies do not generate personal data, do not read personal data from your machine and are never tied to anything that could be used to identify you.</p>
+
+<h3>Problems</h3>
+
+<p>If you have a complaint about the BBB's compliance with this privacy policy, you may contact us at inquiry@newyork.bbb.org. If we are unable to resolve your complaint to your satisfaction, you may elect to proceed with the BBBOnLine's Privacy Policy Review Service by completing the complaint form at <a href="www.bbbonline.org/consumer/complaint/">www.bbbonline.org/consumer/complaint/</a>.</p>
+
+<p>August 2, 2004</p>
+
+
+
 
 
 </body></html>
