--- a/g/ge/get/getcashforsurveys.com.html
+++ b/g/ge/get/getcashforsurveys.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the getcashforsurveys.com privacy policy that was archived on 2004-06-10.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040610185758id_/http%3A//getcashforsurveys.com/privacy.htm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the getcashforsurveys.com privacy policy that was archived on 2004-12-07.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041207014551id_/http%3A//www.getcashforsurveys.com/privacy.htm) for the most accurate reproduction.-->
 
 <html><head>
 
