--- a/p/pr/pre/pressrepublican.com.html
+++ b/p/pr/pre/pressrepublican.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the pressrepublican.com privacy policy that was archived on 2004-06-07.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040607063820id_/http%3A//www.pressrepublican.com/Aboutus/privacy.htm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the pressrepublican.com privacy policy that was archived on 2004-12-07.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041207024525id_/http%3A//www.pressrepublican.com/Aboutus/privacy.htm) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN"><html><head>
 <title>Privacy Policy</title>
@@ -30,6 +30,17 @@ span         { font-variant: small-caps }
 </head>
 
 <body bgcolor="#FFFFFF">
+<!-- SiteCatalyst code version: G.7. Copyright 1997-2004 Omniture, Inc. More info available at http://www.omniture.com --><script language="JavaScript"><!-- /* You may give each page an identifying name, server, and channel on the next lines. */ 
+var s_pageName=""
+var s_server=""
+var s_channel=""
+var s_pageType=""
+var s_prop1=""
+var s_prop2=""
+var s_prop3=""
+var s_prop4=""
+var s_prop5=""
+/********* INSERT THE DOMAIN AND PATH TO YOUR CODE BELOW ************/ //--></script><script language="JavaScript" src="http://www.pressrepublican.com/s_code_remote.js"></script> <!-- End SiteCatalyst code version: G.7. --> 
 
 <table width="596" border="0" cellpadding="0" cellspacing="0" height="576">
    <tbody><tr>
